Feat : 메인페이지 워드클라우드 추가구현

--- a/frontend/styles/Sphere.css
+++ b/frontend/styles/Sphere.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap");
-
 text-sphere {
   position: relative;
   top: 0;
@@ -15,18 +13,20 @@ text-sphere {
   display: inline-block;
   top: 0;
   /* left: 0; */
-  font-family: "Inter", sans-serif;
+  /* font-family: "Inter", sans-serif; */
   font-weight: 600;
   letter-spacing: 0.0625em;
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 
 .tagcloud--item {
-  color: slateblue;
+  color: white;
   text-transform: uppercase;
+  transition: color 0.3s ease, font-size 0.3s ease;
 }
 
 .tagcloud--item:hover {
-  color: salmon;
+  color: rgb(204, 238, 248);
   cursor: pointer;
+  font-size: 1.2em;
 }
