Fix : useEffect dependency 수정

--- a/frontend/public/fonts/font.css
+++ b/frontend/public/fonts/font.css
@@ -5,3 +5,11 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Nanum Gothic";
+  font-style: normal;
+  font-weight: 400;
+  src: url("https://themes.googleusercontent.com/static/fonts/earlyaccess/nanumgothic/v3/NanumGothic-Regular.woff")
+    format("woff2");
+}
