Design : 키워드 및 주식 상세 페이지 스크롤 css 적용 및 기타 개선

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -18,3 +18,21 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #969696;
 }
+
+.keyword_right_box {
+  height: 90vh;
+  overflow-y: auto;
+}
+
+.keyword_right_box::-webkit-scrollbar {
+  display: none;
+}
+
+.stock_right_box {
+  height: 90vh;
+  overflow-y: auto;
+}
+
+.stock_right_box::-webkit-scrollbar {
+  display: none;
+}
