Feat : about us 페이지 추가구현

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -99,3 +99,10 @@
     transform: translateY(15px);
   }
 }
+
+.aboutus-middle-title {
+  font-family: NanumSquareNeo-Variable;
+  font-weight: 900;
+  color: #484848;
+  font-size: 25px;
+}
