Feat : 폰트 경로 수정

--- a/frontend/public/fonts/font.css
+++ b/frontend/public/fonts/font.css
@@ -15,6 +15,14 @@
 }
 
 @font-face {
+  font-family: "GoyangIlsan";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/GoyangIlsan.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: "RixInooAriDuriR";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2207-01@1.0/RixInooAriDuriR.woff2")
     format("woff2");
