--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  font-family: "GoyangIlsan";
+}
+
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -58,6 +62,7 @@
 
 .loading span {
   display: inline-block;
+  font-family: "RixInooAriDuriR";
   margin: 0 0.03em;
   animation: loading 2s infinite;
   color: #294365;
